--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -434,6 +434,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Icons\mmixvd.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\mmixvd16.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\Icons\new.ico"
 				>
 			</File>
@@ -514,6 +522,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath="..\winopt\resource"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
