--- a/vmb/src/button/button.vcproj
+++ b/vmb/src/button/button.vcproj
@@ -63,7 +63,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				UseUnicodeResponseFiles="false"
-				AdditionalDependencies="ws2_32.lib  comctl32.lib"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib Htmlhelp.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -141,7 +141,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				UseUnicodeResponseFiles="false"
-				AdditionalDependencies="ws2_32.lib  comctl32.lib"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib Htmlhelp.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -186,6 +186,25 @@
 			>
 			<File
 				RelativePath=".\button.c"
+				>
+			</File>
+			<File
+				RelativePath=".\help.hhp"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(InputDir)\help.chm"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\help.html"
 				>
 			</File>
 			<File
@@ -242,6 +261,10 @@
 			</File>
 			<File
 				RelativePath="..\winopt\win32debug.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\winopt\win32memory.rc"
 				>
 			</File>
 		</Filter>
