--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -34,6 +34,8 @@ BEGIN
     "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
     VK_F7,          ID_MMIX_ASSEMBLE,       VIRTKEY, NOINVERT
     VK_F5,          ID_MMIX_DEBUG,          VIRTKEY, NOINVERT
+    VK_OEM_PLUS,    ID_VIEW_ZOOMIN,         VIRTKEY, CONTROL, NOINVERT
+    VK_OEM_MINUS,   ID_VIEW_ZOOMOUT,        VIRTKEY, CONTROL, NOINVERT
 END
 
 
@@ -116,7 +118,7 @@ END
 //
 
 IDD_BREAKPOINTS DIALOGEX 0, 0, 134, 76
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_BORDER
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE 
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_ADDRESS,2,3,76,14,ES_AUTOHSCROLL
