--- a/vmb/src/mmixide/mmixvd.vcproj
+++ b/vmb/src/mmixide/mmixvd.vcproj
@@ -268,6 +268,25 @@
 				RelativePath=".\winmain.c"
 				>
 			</File>
+			<File
+				RelativePath=".\help.hhp"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(InputDir)\help.chm"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\help.html"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -502,6 +521,44 @@
 			</File>
 			<File
 				RelativePath=".\Icons\zoomout.ico"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Helpfiles"
+			>
+			<File
+				RelativePath=".\help\mmixide.css"
+				>
+			</File>
+			<File
+				RelativePath=".\mmixvd.hhp"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0&#x0D;&#x0A;"
+						AdditionalDependencies="$(InputDir)\help\mmixide.css;$(InputDir)\help\mmixvd.html"
+						Outputs="$(InputDir)\mmixvd.chm"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0&#x0D;&#x0A;"
+						AdditionalDependencies="$(InputDir)\help\mmixide.css;$(InputDir)\help\mmixvd.html"
+						Outputs="$(InputDir)\mmixvd.chm"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\help\mmixvd.html"
 				>
 			</File>
 		</Filter>
