--- a/vmb/src/timer/timer.vcproj
+++ b/vmb/src/timer/timer.vcproj
@@ -196,6 +196,25 @@
 				RelativePath=".\winmain.c"
 				>
 			</File>
+			<File
+				RelativePath=".\help.hhp"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="HtmlHelp Compiler"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
+						AdditionalDependencies="$(InputDir)\help.html"
+						Outputs="$(InputDir)\help.chm"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\help.html"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -258,6 +277,10 @@
 			</File>
 			<File
 				RelativePath="..\winopt\win32connect.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\winopt\win32memory.rc"
 				>
 			</File>
 			<File
