--- a/vmb/src/winopt/win32dedit.rc
+++ b/vmb/src/winopt/win32dedit.rc
@@ -62,7 +62,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 IDD_DATAEDIT DIALOGEX 0, 0, 252, 38
-STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE | WS_BORDER
+STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE 
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_CONTROLPARENT | WS_EX_APPWINDOW
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
