fixing linux make
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@598 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ SUBDIRS  = util device mother\
 
 .PHONY: hardware $(SUBDIRS) clean
 
-hardware: $(GENERICS) $(SUBDIRS)
+hardware: $(SUBDIRS)
 
 $(SUBDIRS):
 	$(MAKE) -C $@
