--- a/src/hostdisk/hostdisk.vcproj
+++ b/src/hostdisk/hostdisk.vcproj
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="hostdisk"
-	ProjectGUID="{C12BCD03-F88D-4468-B4A0-1FF0E4818221}"
+	ProjectGUID="{BE5B0E6C-C6BC-4D15-B478-C48775482C97}"
 	RootNamespace="hostdisk"
 	Keyword="Win32Proj"
 	>
@@ -45,7 +45,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -122,7 +122,7 @@
 				UseUnicodeResponseFiles="false"
 				AdditionalIncludeDirectories="..\util;..\winopt;..\opt"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -181,7 +181,7 @@
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{5A384688-86B5-439D-B700-C52330851681}"
-			RelativePathToProject="..\opt\vmbwinopt.vcproj"
+			RelativePathToProject="..\winopt\winopt.vcproj"
 		/>
 	</References>
 	<Files>
@@ -266,7 +266,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\winopt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\winopt\win32connect.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\winopt\win32memory.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\winopt\win32debug.rc"
 				>
 			</File>
 			<File
