Adding context menus to memory and register windows
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@611 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.vcproj
+++ b/src/mmixide/mmixide.vcproj
@@ -328,10 +328,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\winopt\resource.h"
-				>
-			</File>
-			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
@@ -560,6 +556,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath="..\winopt\resource"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
