adding context menu to the symbols window
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@614 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.rc
+++ b/src/mmixide/mmixide.rc
@@ -541,12 +541,17 @@ BEGIN
     BEGIN
         MENUITEM "Break at Address",            ID_POPUP_BREAKONADDRESS
         MENUITEM "Break at Value",              ID_POPUP_BREAKONVALUE
-        MENUITEM "Show Memory",                        ID_POPUP_SHOW
+        MENUITEM "Show Memory",                 ID_POPUP_SHOW
     END
 	POPUP "RegisterPopUp"
     BEGIN
         MENUITEM "Break at Value",              ID_POPUP_BREAKONVALUE
-        MENUITEM "Show Memory",                        ID_POPUP_SHOW
+        MENUITEM "Show Memory",                 ID_POPUP_SHOW
+    END
+	POPUP "SymbolPopUp"
+    BEGIN
+        MENUITEM "Break at Symbol",             ID_POPUP_BREAKONVALUE
+        MENUITEM "Show Memory",                 ID_POPUP_SHOW
     END
 END
 
