adding a pretty printer
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@616 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.vcproj
+++ b/src/mmixide/mmixide.vcproj
@@ -230,6 +230,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\indent.c"
+				>
+			</File>
+			<File
 				RelativePath=".\info.c"
 				>
 			</File>
@@ -301,6 +305,10 @@
 			</File>
 			<File
 				RelativePath=".\findreplace.h"
+				>
+			</File>
+			<File
+				RelativePath=".\indent.h"
 				>
 			</File>
 			<File
@@ -435,6 +443,14 @@
 			</File>
 			<File
 				RelativePath=".\Icons\mmixidesmall.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\mmixvd.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\mmixvd16.ico"
 				>
 			</File>
 			<File
