changing to version 2.0
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@624 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.rc
+++ b/src/mmixide/mmixide.rc
@@ -30,6 +30,7 @@ BEGIN
     "F",            ID_EDIT_FIND,           VIRTKEY, CONTROL, NOINVERT
     "G",            ID_EDIT_FINDAGAIN,      VIRTKEY, CONTROL, NOINVERT
     "H",            ID_EDIT_REPLACE,        VIRTKEY, CONTROL, NOINVERT
+    "I",            ID_EDIT_PRETTY,         VIRTKEY, CONTROL, NOINVERT
     "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL, NOINVERT
     "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
     VK_F7,          ID_MMIX_ASSEMBLE,       VIRTKEY, NOINVERT
@@ -142,22 +143,24 @@ BEGIN
     CONTROL         "Use \\t, \\n, \\r, and \\xFF",IDC_CHECK_ESC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,97,49,94,10
 END
 
-IDD_OPTIONS_ASSEMBLER DIALOGEX 0, 0, 186, 100
+IDD_OPTIONS_ASSEMBLER DIALOGEX 0, 0, 239, 115
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTERMOUSE | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Assembler Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,130,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,130,24,50,14
+    DEFPUSHBUTTON   "OK",IDOK,183,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,183,24,50,14
     LTEXT           "Buffer size",IDC_STATIC,7,9,50,8
-    EDITTEXT        IDC_BUFFERSIZE,63,7,56,14,ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,63,7,11,14
-    CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,23,112,10
-    CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,38,112,10
-    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,68,112,10
+    EDITTEXT        IDC_BUFFERSIZE,116,7,56,14,ES_AUTOHSCROLL
+    CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,116,7,11,14
+    CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,23,165,10
+    CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,38,165,10
+    CONTROL         "Treat Warnings as Errors",IDC_CHECK_WARNERROR,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,53,165,10
+    CONTROL         "Warn on imprecise floating point constants",IDC_CHECK_IMPRECISE,
+                    "Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,68,165,10
+    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,83,165,10
     CONTROL         "Auto close error list",IDC_CHECK_AUTOCLOSE_ERRORS,
-                    "Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,83,112,10
-    CONTROL         "Treat Warnings as Errors",IDC_CHECK_WARNERROR,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,53,112,10
+                    "Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,98,165,10
 END
 
 IDD_OPTIONS_EDITOR DIALOGEX 0, 0, 186, 181
@@ -174,16 +177,16 @@ BEGIN
     EDITTEXT        IDC_TABWIDTH,14,72,30,14,ES_RIGHT | ES_AUTOHSCROLL
     CONTROL         "",IDC_SPIN_TABWIDTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,72,11,14
     LTEXT           "Tabulator width",IDC_STATIC,48,75,51,8
-    CONTROL         "Use tabs for indentation ",IDC_USE_TABS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,90,95,10
+    CONTROL         "Use tabulators for indentation ",IDC_USE_TABS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,90,114,10
     EDITTEXT        IDC_LABEL_WIDTH,14,102,30,14,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN_TABWIDTH2,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,102,11,14
-    LTEXT           "Prefered label width",IDC_STATIC,47,105,65,8
+    CONTROL         "",IDC_SPIN_LABEL,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,102,11,14
+    LTEXT           "Maximum label width",IDC_STATIC,47,105,66,8
     EDITTEXT        IDC_OPCODE_WIDTH,14,121,30,14,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN_TABWIDTH3,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,121,11,14
-    LTEXT           "Prefered opcode width",IDC_STATIC,47,124,74,8
+    CONTROL         "",IDC_SPIN_OPCODE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,121,11,14
+    LTEXT           "Maximum opcode width",IDC_STATIC,47,124,75,8
     EDITTEXT        IDC_ARG_WIDTH,14,140,30,14,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN_TABWIDTH4,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,140,11,14
-    LTEXT           "Prefered argument width",IDC_STATIC,46,143,81,8
+    CONTROL         "",IDC_SPIN_ARG,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,33,140,11,14
+    LTEXT           "Maximum argument width",IDC_STATIC,46,143,82,8
     CONTROL         "Use CR LF for line ends",IDC_USE_CRLF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,158,95,10
 END
 
@@ -309,9 +312,9 @@ BEGIN
     IDD_OPTIONS_ASSEMBLER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 180
+        RIGHTMARGIN, 233
         TOPMARGIN, 7
-        BOTTOMMARGIN, 93
+        BOTTOMMARGIN, 108
     END
 
     IDD_OPTIONS_EDITOR, DIALOG
