adding separate about.rc file for mmixide.vcproj
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@629 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.vcproj
+++ b/src/mmixide/mmixide.vcproj
@@ -336,6 +336,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\winopt\resource.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
@@ -510,7 +514,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\winopt\win32about.rc"
+				RelativePath="about.rc"
 				>
 			</File>
 			<File
