--- a/src/mmixide/about.rc
+++ b/src/mmixide/about.rc
@@ -35,6 +35,8 @@ BEGIN
     CTEXT           "Revision:",IDC_REVISION,5,24,257,12,SS_CENTERIMAGE
     CTEXT           "Version:",IDC_VERSION,5,43,257,12,SS_CENTERIMAGE
     CTEXT           "Copyright: Martin Ruckert, 2012",IDC_STATIC,5,62,257,12,SS_CENTERIMAGE
+    CTEXT           "Using the Scintilla Editor Component",IDC_STATIC,5,81,257,12
+    CTEXT           "See: www.scintilla.org",IDC_STATIC,5,93,257,12
 END
 
 
