--- a/src/opt/vmbwinopt.vcproj
+++ b/src/opt/vmbwinopt.vcproj
@@ -156,6 +156,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\winconfig.c"
+				>
+			</File>
+			<File
+				RelativePath=".\winconnect.c"
+				>
+			</File>
+			<File
 				RelativePath=".\windebug.c"
 				>
 			</File>
