moving win32_param_init to opt and fixing bug in mmixide when storing to marginal registers
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@642 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/opt/vmbwinopt.vcproj
+++ b/src/opt/vmbwinopt.vcproj
@@ -172,6 +172,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\winparam.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winproc.c"
 				>
 			</File>
