--- a/examples/Hello/Makefile
+++ b/examples/Hello/Makefile
@@ -2,6 +2,12 @@
 
 all: hello.mmo bios.img
 
+%.o: %.mms
+	mmix-as hello.mms -o hello.o
+	
+%.mmo: %.o
+	mmix-ld --oformat mmo hello.o -o hello.mmo
+
 %.mmo: %.mms
 	mmixal $<
 
