--- a/src/mmixide/vmb_vd.rc
+++ b/src/mmixide/vmb_vd.rc
@@ -124,6 +124,7 @@ BEGIN
         MENUITEM "&About",                      ID_HELP_ABOUT,MFT_STRING,MFS_ENABLED
         MENUITEM "&Content",                    ID_HELP_CONTENT,MFT_STRING,MFS_ENABLED
         MENUITEM "&Instructions",               ID_HELP_INSTRUCTIONS,MFT_STRING,MFS_ENABLED
+        MENUITEM "Con&figuration",              ID_HELP_CONFIGURATION,MFT_STRING,MFS_ENABLED
     END
 END
 
