--- a/src/mother/mother.vcproj
+++ b/src/mother/mother.vcproj
@@ -193,14 +193,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\mother.c"
-				>
-			</File>
-			<File
-				RelativePath=".\optiontab.c"
-				>
-			</File>
-			<File
 				RelativePath=".\help.hhp"
 				>
 				<FileConfiguration
@@ -209,7 +201,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="HtmlHelp Compiler"
-						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0&#x0D;&#x0A;"
 						AdditionalDependencies="$(InputDir)\help.html"
 						Outputs="$(InputDir)\help.chm"
 					/>
@@ -217,6 +209,14 @@
 			</File>
 			<File
 				RelativePath=".\help.html"
+				>
+			</File>
+			<File
+				RelativePath=".\mother.c"
+				>
+			</File>
+			<File
+				RelativePath=".\optiontab.c"
 				>
 			</File>
 		</Filter>
@@ -235,10 +235,6 @@
 			</File>
 			<File
 				RelativePath="..\util\message.h"
-				>
-			</File>
-			<File
-				RelativePath="..\opt\resource.h"
 				>
 			</File>
 			<File
@@ -288,11 +284,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\winopt\win32memory.rc"
+				RelativePath="..\winopt\win32debug.rc"
 				>
 			</File>
 			<File
-				RelativePath="..\winopt\win32debug.rc"
+				RelativePath="..\winopt\win32memory.rc"
 				>
 			</File>
 		</Filter>
