--- a/src/winvram/winvram.vcproj
+++ b/src/winvram/winvram.vcproj
@@ -193,14 +193,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\optiontab.c"
-				>
-			</File>
-			<File
-				RelativePath=".\winmain.c"
-				>
-			</File>
-			<File
 				RelativePath=".\help.hhp"
 				>
 				<FileConfiguration
@@ -209,7 +201,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="HtmlHelp Compiler"
-						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0&#x0D;&#x0A;"
 						AdditionalDependencies="$(InputDir)\help.html"
 						Outputs="$(InputDir)\help.chm"
 					/>
@@ -219,16 +211,20 @@
 				RelativePath=".\help.html"
 				>
 			</File>
+			<File
+				RelativePath=".\optiontab.c"
+				>
+			</File>
+			<File
+				RelativePath=".\winmain.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath="..\opt\resource.h"
-				>
-			</File>
 			<File
 				RelativePath=".\resource.h"
 				>
@@ -260,15 +256,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\winopt\win32memory.rc"
-				>
-			</File>
-			<File
 				RelativePath="..\winopt\win32debug.rc"
 				>
 			</File>
 			<File
 				RelativePath="..\winopt\win32dedit.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\winopt\win32memory.rc"
 				>
 			</File>
 		</Filter>
