fixing button problems
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@652 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.vcproj
+++ b/src/mmixide/mmixide.vcproj
@@ -344,6 +344,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\resource.h"
+				>
+			</File>
+			<File
 				RelativePath=".\sources.h"
 				>
 			</File>
@@ -363,6 +367,10 @@
 			>
 			<File
 				RelativePath="about.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\bitmap1.bmp"
 				>
 			</File>
 			<File
