working on debugging modes, implementing a showing_stats flag
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@655 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/mmixide.rc
+++ b/src/mmixide/mmixide.rc
@@ -91,13 +91,13 @@ BEGIN
     LISTBOX         IDC_LIST_BREAKPOINTS,2,42,130,32,LBS_SORT | LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_SHOW_DEBUG DIALOGEX 0, 0, 307, 199
+IDD_SHOW_DEBUG DIALOGEX 0, 0, 307, 219
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTERMOUSE | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Debug Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,167,179,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,245,179,50,14
+    DEFPUSHBUTTON   "OK",IDOK,167,199,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,245,199,50,14
     CONTROL         "Local Registers",IDC_SHOW_LOCAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,17,64,10
     CONTROL         "Global Registers",IDC_SHOW_GLOBAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,41,67,10
     CONTROL         "Special Registers",IDC_SHOW_SPECIAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,53,70,10
@@ -117,11 +117,12 @@ BEGIN
                     "Button",BS_AUTORADIOBUTTON,17,123,115,10
     CONTROL         "Break before instruction",IDC_RADIO_BREAK_BEFORE,"Button",BS_AUTORADIOBUTTON,17,137,93,10
     CONTROL         "Auto-Close Debug Windows",IDC_CHECK_AUTOCLOSE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,176,103,105,10
-    GROUPBOX        "Tracing",IDC_STATIC,9,84,153,109
+    GROUPBOX        "Tracing",IDC_STATIC,9,84,153,129
     CONTROL         "Warn if no application",IDC_CHECK_MISSING_APP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,176,120,85,10
     CONTROL         "Debug Operating System",IDC_CHECK_OS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,179,96,10
     CONTROL         "Enable stack tracing ",IDC_CHECK_STACKTRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,151,96,10
     PUSHBUTTON      "Choose ...",IDC_SELECT_EXCEPTIONS,102,162,50,14
+    CONTROL         "Show Statistics",IDC_CHECK_STAT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,193,64,10
 END
 
 IDD_FIND DIALOGEX 0, 0, 317, 79
@@ -298,7 +299,7 @@ BEGIN
     IDD_SHOW_DEBUG, DIALOG
     BEGIN
         RIGHTMARGIN, 296
-        BOTTOMMARGIN, 193
+        BOTTOMMARGIN, 213
     END
 
     IDD_FIND, DIALOG
