--- a/src/rom/rom.vcproj
+++ b/src/rom/rom.vcproj
@@ -189,14 +189,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\rom.c"
-				>
-			</File>
-			<File
-				RelativePath=".\winmain.c"
-				>
-			</File>
-			<File
 				RelativePath=".\help.hhp"
 				>
 				<FileConfiguration
@@ -205,7 +197,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="HtmlHelp Compiler"
-						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0"
+						CommandLine="&quot;C:\Program Files (x86)\HTML Help Workshop\hhc.exe&quot; $(InputFileName)&#x0D;&#x0A;IF ERRORLEVEL 1 EXIT /B 0&#x0D;&#x0A;"
 						AdditionalDependencies="$(InputDir)\help.html"
 						Outputs="$(InputDir)\help.chm"
 					/>
@@ -215,12 +207,24 @@
 				RelativePath=".\help.html"
 				>
 			</File>
+			<File
+				RelativePath=".\rom.c"
+				>
+			</File>
+			<File
+				RelativePath=".\winmain.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\winopt\resource.h"
+				>
+			</File>
 			<File
 				RelativePath=".\resource.h"
 				>
@@ -268,10 +272,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\winopt\win32memory.rc"
-				>
-			</File>
-			<File
 				RelativePath="..\winopt\win32debug.rc"
 				>
 			</File>
@@ -279,7 +279,15 @@
 				RelativePath="..\winopt\win32dedit.rc"
 				>
 			</File>
+			<File
+				RelativePath="..\winopt\win32memory.rc"
+				>
+			</File>
 		</Filter>
+		<File
+			RelativePath="..\winopt\resource"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
