--- a/src/winopt/win32memory.rc
+++ b/src/winopt/win32memory.rc
@@ -25,29 +25,22 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-IDD_MEMORY DIALOGEX 0, 0, 240, 133
+IDD_MEMORY DIALOGEX 0, 0, 262, 134
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    SCROLLBAR       IDC_MEM_SCROLLBAR,221,24,12,103,SBS_VERT
-    EDITTEXT        IDC_GOTO,148,8,85,12,ES_AUTOHSCROLL | ES_WANTRETURN | NOT WS_BORDER | WS_GROUP,WS_EX_CLIENTEDGE
-    LTEXT           "Go to:",IDC_GOTO_PROMPT,148,0,21,8
-    CONTROL         "",IDC_CHECK_BYTE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,1,11,8,10
-    CONTROL         "",IDC_CHECK_WYDE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,11,8,10
-    CONTROL         "",IDC_CHECK_BYTE3,"Button",BS_AUTOCHECKBOX | WS_DISABLED,17,11,8,10
-    CONTROL         "",IDC_CHECK_TETRA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,25,11,8,10
-    CONTROL         "",IDC_CHECK_BYTE5,"Button",BS_AUTOCHECKBOX | WS_DISABLED,33,11,8,10
-    CONTROL         "",IDC_CHECK_BYTE6,"Button",BS_AUTOCHECKBOX | WS_DISABLED,41,11,8,10
-    CONTROL         "",IDC_CHECK_BYTE7,"Button",BS_AUTOCHECKBOX | WS_DISABLED,49,11,8,10
-    CONTROL         "",IDC_CHECK_OCTA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,57,11,8,10
-    LTEXT           "Chunk",IDC_CHUNK,2,0,21,8
-    CONTROL         "FF",IDC_FORMAT_HEX,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,70,0,21,10
-    CONTROL         "'a'",IDC_FORMAT_ASCII,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,70,11,21,10
-    CONTROL         "+99",IDC_FORMAT_INT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,91,0,27,10
-    CONTROL         "0.5",IDC_FORMAT_FLOAT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,91,11,27,10
-    CONTROL         "99",IDC_FORMAT_UINT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,120,0,24,10
-    CONTROL         "01",IDC_FORMAT_BIN,"Button",BS_AUTORADIOBUTTON | WS_DISABLED | WS_TABSTOP,120,11,24,10
+    SCROLLBAR       IDC_MEM_SCROLLBAR,250,25,12,103,SBS_VERT
+    EDITTEXT        IDC_GOTO,173,11,85,12,ES_AUTOHSCROLL | ES_WANTRETURN | NOT WS_BORDER | WS_GROUP,WS_EX_CLIENTEDGE
+    LTEXT           "Go to:",IDC_GOTO_PROMPT,173,3,21,8
+    LTEXT           "Chunk",IDC_CHUNK,5,5,60,8
+    CONTROL         "FF",IDC_FORMAT_HEX,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,77,5,30,10
+    CONTROL         "'a'",IDC_FORMAT_ASCII,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,77,17,30,10
+    CONTROL         "+99",IDC_FORMAT_INT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,107,5,30,10
+    CONTROL         "0.5",IDC_FORMAT_FLOAT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,107,17,30,10
+    CONTROL         "99",IDC_FORMAT_UINT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,142,5,30,10
+    CONTROL         "01",IDC_FORMAT_BIN,"Button",BS_AUTORADIOBUTTON | WS_DISABLED | WS_TABSTOP,142,17,30,10
+    CONTROL         "",IDC_SLIDER_CHUNK,"msctls_trackbar32",TBS_TOP | WS_TABSTOP,2,13,73,18
 END
 
 
@@ -61,8 +54,8 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_MEMORY, DIALOG
     BEGIN
-        RIGHTMARGIN, 233
-        BOTTOMMARGIN, 127
+        RIGHTMARGIN, 246
+        BOTTOMMARGIN, 128
     END
 END
 #endif    // APSTUDIO_INVOKED
