adding binary memmory display
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@673 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/winopt/win32memory.rc
+++ b/src/winopt/win32memory.rc
@@ -39,7 +39,7 @@ BEGIN
     CONTROL         "+99",IDC_FORMAT_INT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,107,5,30,10
     CONTROL         "0.5",IDC_FORMAT_FLOAT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,107,17,30,10
     CONTROL         "99",IDC_FORMAT_UINT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,142,5,30,10
-    CONTROL         "01",IDC_FORMAT_BIN,"Button",BS_AUTORADIOBUTTON | WS_DISABLED | WS_TABSTOP,142,17,30,10
+    CONTROL         "01",IDC_FORMAT_BIN,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,142,17,30,10
     CONTROL         "",IDC_SLIDER_CHUNK,"msctls_trackbar32",TBS_TOP | WS_TABSTOP,2,13,73,18
 END
 
